<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="#292929">

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:background="@drawable/clear_border">

        <LinearLayout
            android:id="@+id/dialog_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/title_truth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_truth"
                android:textColor="#FFFFFF"
                android:textSize="32sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/title_dare"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#FFA31A"
                android:text="@string/title_dare"
                android:textColor="#1B1B1B"
                android:textSize="32sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">

            <CheckBox
                android:id="@+id/question_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="#FFFFFF"
                android:text="@string/question"
                android:textColor="#FFFFFF"
                android:layout_marginStart="30dp"
                android:textStyle="bold">
            </CheckBox>

            <CheckBox
                android:id="@+id/action_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="#FFFFFF"
                android:text="@string/action"
                android:textColor="#FFFFFF"
                android:layout_marginStart="20dp"
                android:textStyle="bold">
            </CheckBox>
        </LinearLayout>

        <EditText
            android:id="@+id/editText"
            android:layout_marginTop="15dp"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/white_border"
            android:ems="10"
            android:hint="@string/edit_task"
            android:inputType="text|textMultiLine"
            android:textColor="#FFFFFF"
            android:textColorHint="#808080"
            android:textSize="28sp" />

        <Button
            android:id="@+id/accept"
            android:layout_marginTop="15dp"
            android:layout_width="220dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:background="@drawable/circle_button"
            android:text="@string/accept"
            android:textStyle="bold" />

        <Button
            android:id="@+id/cancel"
            android:layout_marginTop="15dp"
            android:layout_width="220dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:background="@drawable/circle_button"
            android:text="@string/cancel"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>
