<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#1B1B1B"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/title_truth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_truth"
                android:textColor="#FFFFFF"
                android:textSize="40sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/title_dare"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#FFA31A"
                android:text="@string/title_dare"
                android:textColor="#1B1B1B"
                android:textSize="40sp"
                android:textStyle="bold" />

        </LinearLayout>

        <TextView
            android:id="@+id/contract"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:text="@string/contract_value"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold"
            android:background="@drawable/white_border"/>

        <LinearLayout
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/play"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/circle_button"
                android:text="@string/play"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/load"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:background="@drawable/circle_button"
                android:text="@string/load_tasks"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/rules"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:background="@drawable/circle_button"
                android:text="@string/rules"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/exit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:background="@drawable/circle_button"
                android:text="@string/exit"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>