<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddPlayerActivity">

    <LinearLayout
        android:id="@+id/add_player_layout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#1B1B1B"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="bottom|center_horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ListView
                android:id="@+id/listPlayers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="bottom|center_horizontal">

            <Button
                android:id="@+id/to_play"
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:background="@drawable/circle_button"
                android:text="@string/play"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/add_player"
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:background="@drawable/circle_button"
                android:text="@string/add"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/cancel_to_menu"
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:background="@drawable/circle_button"
                android:text="@string/go_to_menu"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>